--- a/app/templates/programs/fields_data.html
+++ b/app/templates/programs/fields_data.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1 class="display-6" xmlns="http://www.w3.org/1999/html">{% block title %} Сводная информация по полям рабочих программ плана {% endblock %}</h1>
-    <p></p>
+    <h1 class="display-6">
+        {% block title %} Сводная информация по полям рабочих программ плана {% endblock %}
+    </h1>
+
     <h2 class="h5 mb-3 fw-normal"><b>{{ plan_name }}</b></h2>
 
 <form action="" method="post" novalidate>
