--- a/app/templates/programs/fields_data.html
+++ b/app/templates/programs/fields_data.html
@@ -5,7 +5,7 @@
         {% block title %} Сводная информация по полям рабочих программ плана {% endblock %}
     </h1>
 
-    <h2 class="h5 mb-3 fw-normal"><b>{{ plan_name }}</b></h2>
+    <div class="h4 mt-1 mb-3 text-white bg-dark fw-normal"><b>{{ plan_name }}</b></div>
 
 <form action="" method="post" novalidate>
     {{ form.hidden_tag() }}
