--- a/app/templates/schedule/schedule.html
+++ b/app/templates/schedule/schedule.html
@@ -33,20 +33,30 @@
       </div>
     </div>
 
-    <div class="row mb-3 gy-3">
-      <div class="d-grid col-xl-8">
-        <input type="submit" name="ical_exp" value="Экспорт в формате iCal" class="btn btn-secondary">
-      </div>
-      <div class="d-grid col-xl-8">
-        <input type="submit" name="xlsx_exp" value="Экспорт в формате Excel" class="btn btn-secondary">
-      </div>
+
+    <div class="row mt-3 gy-3">
+        <div class="d-grid col-xl-4">
+            <input type="submit" name="ical_exp" value="Экспорт в iCal" class="btn btn-danger bg-opacity-75">
+        </div>
+        <div class="d-grid col-xl-4">
+            <input type="submit" name="xlsx_exp" value="Экспорт в Excel" class="btn btn-success bg-opacity-75">
+        </div>
     </div>
+    <div class="row mb-4 gy-3">
+        <div class="d-grid col-xl-4 text-center text-wrap">
+            (для загрузки в календарь)
+        </div>
+        <div class="d-grid col-xl-4 text-center text-wrap">
+            (список для работы и печати)
+        </div>
+    </div>
+
     {% else %}
     {% endif %}
 
     {% if error %}
     <div class="row mb-3 gy-3">
-    <div class="d-grid col-md-7">
+    <div class="d-grid col-xl-8">
         <div class="alert alert-warning" role="alert">
           {{ error }}
         </div>
