--- a/app/templates/main/choose_plan.html
+++ b/app/templates/main/choose_plan.html
@@ -4,7 +4,7 @@
     <div class="row mb-3 gy-3">
       <div class="col-xl-8">
         <label class="form-label">{{ form.edu_spec.label }}</label>
-        {{ form.edu_spec (class="form-select form-select-ld") }}
+        {{ form.edu_spec (class="form-select form-select-xl") }}
       </div>
       <div>
         <input type="submit" name="spec_choose" value="Выбор" class="btn btn-secondary">
@@ -15,7 +15,7 @@
     <div class="row mb-3 gy-3">
       <div class="col-xl-8">
         <label class="form-label">{{ form.edu_plan.label }}</label>
-        {{ form.edu_plan(class="form-select form-select-ld") }}
+        {{ form.edu_plan(class="form-select form-select-xl") }}
       </div>
     </div>
 
