--- a/app/templates/plans/comp_load.html
+++ b/app/templates/plans/comp_load.html
@@ -5,12 +5,14 @@
         {% block title %} Загрузка компетенций в учебный план {% endblock %}
     </h1>
 
-    <div class="h4 mt-1 mb-3 text-white bg-dark fw-normal"><b>{{ plan_name }}</b></div>
+    <div class="d-grid col-xl-8">
+    <div class="h4 mt-2 mb-4 text-white text-center bg-dark fw-normal"><b>{{ plan_name }}</b></div>
+    </div>
 
-<form action="" enctype="multipart/form-data" method="post">
+    <form action="" enctype="multipart/form-data" method="post">
     {{ form.hidden_tag() }}
 
-    <div class="row mt-3 gy-3">
+    <div class="row">
         <div class="d-grid col-xl-4">
             <input type="submit" name="comp_load_temp" value="Шаблон" class="btn btn-warning bg-opacity-75">
         </div>
@@ -88,5 +90,5 @@
     </div>
     {% endif %}
 
-</form>
+    </form>
     {% endblock %}
