--- a/app/templates/plans/matrix_choose_plan.html
+++ b/app/templates/plans/matrix_choose_plan.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1 class="display-6" xmlns="http://www.w3.org/1999/html">
-        {% block title %} Матрица компетенций (с индикаторами) {% endblock %}
+        {% block title %} {{ title }} {% endblock %}
     </h1>
     <p></p>
 
