--- a/app/templates/plans/mtrx_sim_choose_plan.html
+++ b/app/templates/plans/mtrx_sim_choose_plan.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1 class="display-6" xmlns="http://www.w3.org/1999/html">
-        {% block title %} Загрузка связей компетенций в учебный план {% endblock %}
+        {% block title %} Матрица компетенций (простая) {% endblock %}
     </h1>
     <p></p>
 
