--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -89,8 +89,8 @@
          {% if active == "plans" %}
              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                  <li><a href="{{ url_for('plans.comp_choose_plan') }}" class="text-white rounded">Загрузка компетенций</a></li>
-                 <li><a href="{{ url_for('plans.mtrx_sim_choose_plan') }}" class="text-white rounded">Простая матрица</a></li>
-<!--                 <li><a href="{{ url_for('plans.mtrx_ind_choose_plan') }}" class="text-white rounded">Матрица c индикаторами</a></li>-->
+                 <li><a href="{{ url_for('plans.mtrx_sim_choose_plan') }}" class="text-white rounded">Матрица простая</a></li>
+{#                 <li><a href="{{ url_for('plans.mtrx_ind_choose_plan') }}" class="text-white rounded">Матрица c индикаторами</a></li>#}
              </ul>
          {% endif %}
       {% endif %}
