--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -91,6 +91,7 @@
                  <li><a href="{{ url_for('plans.comp_choose_plan') }}" class="text-white rounded">Загрузка компетенций</a></li>
                  <li><a href="{{ url_for('plans.matrix_simple_choose_plan') }}" class="text-white rounded">Матрица простая</a></li>
                  <li><a href="{{ url_for('plans.matrix_indicator_choose_plan') }}" class="text-white rounded">Матрица c индикаторами</a></li>
+                 <li><a href="{{ url_for('plans.matrix_indicator_export') }}" class="text-white rounded">Индикаторы по дисциплинам</a></li>
              </ul>
          {% endif %}
       {% endif %}
@@ -127,6 +128,14 @@
         </li>
         {% endif %}
 
+         {% if current_user.is_authenticated %}
+            {% if active == "library" %}
+             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                 <li><a href="{{ url_for('library.library_choose_plan') }}" class="text-white rounded">Список литературы</a></li>
+                 <li><a href="{{ url_for('library.library_np_choose_plan') }}" class="text-white rounded">Научная продукция</a></li>
+             </ul>
+            {% endif %}
+         {% endif %}
     </ul>
 
     <hr>
