--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -90,7 +90,7 @@
              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                  <li><a href="{{ url_for('plans.comp_choose_plan') }}" class="text-white rounded">Загрузка компетенций</a></li>
                  <li><a href="{{ url_for('plans.matrix_simple_choose_plan') }}" class="text-white rounded">Матрица простая</a></li>
-                 <li><a href="{{ url_for('plans.matrix_indicator_choose_plan') }}" class="text-white rounded">Матрица c индикаторами</a></li>
+{#                 <li><a href="{{ url_for('plans.matrix_indicator_choose_plan') }}" class="text-white rounded">Матрица c индикаторами</a></li>#}
                  <li><a href="{{ url_for('plans.matrix_indicator_export') }}" class="text-white rounded">Индикаторы по дисциплинам</a></li>
              </ul>
          {% endif %}
