--- a/app/templates/programs/dept_check.html
+++ b/app/templates/programs/dept_check.html
@@ -49,7 +49,7 @@
                     <td><span style="white-space: pre-line">{{ wp }}</span></td>
                   </tr>
                   <tr>
-                    <td><span style="white-space: pre-line">{{ wp_data[plan][wp] }}</span></td>
+                    <td><span style="white-space: pre-line">{{ wp_data[plan][wp][0] }}</span></td>
                   </tr>
                   <tr>
                     <td></td>
