--- a/app/templates/programs/wp_field_edit.html
+++ b/app/templates/programs/wp_field_edit.html
@@ -25,7 +25,7 @@
       <div class="col-xl-8">
           <div class="input-group">
             <span class="input-group-text">{{ form.wp_field_edit.label }}</span>
-            {{ form.wp_field_edit(class="form-control", rows="10", value=wp_data) }}
+            {{ form.wp_field_edit(class="form-control", rows="10", value=wp_field_data) }}
           </div>
       </div>
     </div>
@@ -35,9 +35,8 @@
             {{ form.field_update (class="btn btn-warning") }}
         </div>
     </div>
-
+{{ load_data }}
 </form>
-
 
 <!--    {% if wp_data %}-->
 <!--<div>-->
