--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -59,6 +59,7 @@
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
 
+      <!-- Главная -->
       <li class="nav-item">
          {% if active == "index" %}
            <a href="/" class="nav-link active text-white" aria-current="page">
@@ -69,6 +70,7 @@
          Главная</a>
       </li>
 
+      <!-- Расписание -->
       <li>
          {% if active == "schedule" %}
            <a href="{{ url_for('schedule.schedule') }}" class="nav-link active text-white" aria-current="page">
@@ -79,6 +81,7 @@
          Расписание</a>
       </li>
 
+      <!-- Отчет о нагрузке -->
       <li>
          {% if active == "load" %}
            <a href="{{ url_for('load.load_report') }}" class="nav-link active text-white" aria-current="page">
@@ -89,8 +92,8 @@
          Отчет о нагрузке</a>
       </li>
 
-      {% if current_user.is_authenticated %}
-
+      <!-- Учебные планы -->
+      {% if current_user.is_authenticated and current_user.get_id() in ['1'] %}
       <li>
           {% if active == "plans" %}
             <a href="{{ url_for('plans.comp_choose_plan') }}" class="nav-link active text-white" aria-current="page">
@@ -110,6 +113,7 @@
          {% endif %}
       {% endif %}
 
+      <!-- Программы -->
       <li>
           {% if active == "programs" %}
             <a href="{{ url_for('programs.dept_check') }}" class='nav-link active text-white' aria-current="page">
@@ -120,23 +124,32 @@
           Программы</a>
       </li>
 
-         {% if current_user.is_authenticated %}
+         {% if current_user.is_authenticated and current_user.get_id() in ['1', '3'] %}
             {% if active == "programs" %}
              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                  <li><a href="{{ url_for('programs.dept_check') }}" class="text-white rounded">Проверка по кафедре</a></li>
+               {% if current_user.get_id() in ['1'] %}
                  <li><a href="{{ url_for('programs.dates_update') }}" class="text-white rounded">Обновление дат</a></li>
+               {% endif %}
                  <li><a href="{{ url_for('programs.fields_choose_plan') }}" class="text-white rounded">Значения полей</a></li>
+               {% if current_user.get_id() in ['1'] %}
                  <li><a href="{{ url_for('programs.wp_data_choose_plan') }}" class="text-white rounded">Общая информация</a></li>
+               {% endif %}
              </ul>
             {% endif %}
          {% endif %}
 
-        {% if current_user.is_authenticated %}
+        <!-- Литература -->
+        {% if current_user.is_authenticated and current_user.get_id() in ['1', '3', '4'] %}
         <li>
-          {% if active == "library" %}
+          {% if active == "library" and current_user.get_id() in ['1', '4'] %}
             <a href="{{ url_for('library.library_choose_plan') }}" class='nav-link active text-white rounded collapsed' aria-current="page">
-          {% else %}
+          {% elif current_user.get_id() in ['1', '4'] %}
             <a href="{{ url_for('library.library_choose_plan') }}" class="nav-link text-secondary rounded collapsed" aria-current="page">
+          {% elif active == "library" and current_user.get_id() in ['3'] %}
+            <a href="{{ url_for('library.library_np_choose_plan') }}" class='nav-link active text-white rounded collapsed' aria-current="page">
+          {% elif current_user.get_id() in ['3'] %}
+            <a href="{{ url_for('library.library_np_choose_plan') }}" class="nav-link text-secondary rounded collapsed" aria-current="page">
           {% endif %}
           <svg class="bi me-2" width="16" height="16"><use xlink:href="#book"/></svg>
           Литература</a>
@@ -146,10 +159,14 @@
          {% if current_user.is_authenticated %}
             {% if active == "library" %}
              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+               {% if current_user.get_id() in ['1', '4'] %}
                  <li><a href="{{ url_for('library.library_choose_plan') }}" class="text-white rounded">Список литературы</a></li>
+               {% endif %}
+               {% if current_user.get_id() in ['1', '3'] %}
                  <li><a href="{{ url_for('library.library_np_choose_plan') }}" class="text-white rounded">Научная продукция</a></li>
+               {% endif %}
              </ul>
-            {% endif %}
+           {% endif %}
          {% endif %}
     </ul>
 
