--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -93,7 +93,7 @@
       </li>
 
       <!-- Учебные планы -->
-      {% if current_user.is_authenticated and current_user.get_id() in ['1'] %}
+      {% if current_user.is_authenticated and current_user.get_id() in ['1', '3'] %}
       <li>
           {% if active == "plans" %}
             <a href="{{ url_for('plans.comp_choose_plan') }}" class="nav-link active text-white" aria-current="page">
@@ -105,9 +105,13 @@
       </li>
          {% if active == "plans" %}
              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+               {% if current_user.get_id() in ['1'] %}
                  <li><a href="{{ url_for('plans.comp_choose_plan') }}" class="text-white rounded">Загрузка компетенций</a></li>
+               {% endif %}
                  <li><a href="{{ url_for('plans.matrix_simple_choose_plan') }}" class="text-white rounded">Матрица простая</a></li>
+               {% if current_user.get_id() in ['1'] %}
                  <li><a href="{{ url_for('plans.matrix_indicator_choose_plan') }}" class="text-white rounded">Матрица c индикаторами</a></li>
+               {% endif %}
                  <li><a href="{{ url_for('plans.matrix_indicator_file_upload') }}" class="text-white rounded">Индикаторы по дисциплинам</a></li>
              </ul>
          {% endif %}
@@ -125,21 +129,21 @@
       </li>
 
          {% if current_user.is_authenticated and current_user.get_id() in ['1', '3'] %}
-            {% if active == "programs" %}
+           {% if active == "programs" %}
              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                  <li><a href="{{ url_for('programs.dept_check') }}" class="text-white rounded">Проверка по кафедре</a></li>
                {% if current_user.get_id() in ['1'] %}
                  <li><a href="{{ url_for('programs.dates_update') }}" class="text-white rounded">Обновление дат</a></li>
                {% endif %}
                  <li><a href="{{ url_for('programs.fields_choose_plan') }}" class="text-white rounded">Значения полей</a></li>
-               {% if current_user.get_id() in ['1'] %}
+               {% if current_user.get_id() in ['1', '3'] %}
                  <li><a href="{{ url_for('programs.wp_data_choose_plan') }}" class="text-white rounded">Общая информация</a></li>
                {% endif %}
              </ul>
-            {% endif %}
+           {% endif %}
          {% endif %}
 
-        <!-- Литература -->
+        <!-- Обеспечение -->
         {% if current_user.is_authenticated and current_user.get_id() in ['1', '3', '4'] %}
         <li>
           {% if active == "library" and current_user.get_id() in ['1', '4'] %}
@@ -152,7 +156,7 @@
             <a href="{{ url_for('library.library_np_choose_plan') }}" class="nav-link text-secondary rounded collapsed" aria-current="page">
           {% endif %}
           <svg class="bi me-2" width="16" height="16"><use xlink:href="#book"/></svg>
-          Литература</a>
+          Обеспечение</a>
         </li>
         {% endif %}
 
