--- a/app/templates/plans/matrix_simple_load.html
+++ b/app/templates/plans/matrix_simple_load.html
@@ -48,72 +48,76 @@
         <div class="d-grid col-xl-4">
             <input type="submit" name="mtrx_download" value="Сформировать матрицу" class="btn btn-primary bg-opacity-75">
         </div>
+      {% if current_user.get_id() in ['1'] %}
         <div class="d-grid col-xl-4">
             <input type="submit" name="mtrx_delete" value="Удаление связей" class="btn btn-danger bg-opacity-75">
         </div>
+      {% endif %}
     </div>
     <div class="row mb-4 gy-3">
         <div class="d-grid col-xl-4 text-center text-wrap">
             (Скачать текущую матрицу в формате Excel)
         </div>
+      {% if current_user.get_id() in ['1'] %}
         <div class="d-grid col-xl-4 text-center text-wrap">
             (Удаление связей дисциплин и компетенций, и их содержимого из рабочих программ)
         </div>
+      {% endif %}
     </div>
-
-    <div class="row mb-3 gy-3">
-        <div class="col-xl-8">
-            <label for="formFile" class="form-label">Выберите файл Excel для загрузки</label>
-            <input class="form-control" type="file" name="file" id="formFile">
+    {% if current_user.get_id() in ['1'] %}
+        <div class="row mb-3 gy-3">
+            <div class="col-xl-8">
+                <label for="formFile" class="form-label">Выберите файл Excel для загрузки</label>
+                <input class="form-control" type="file" name="file" id="formFile">
+            </div>
         </div>
-    </div>
-    <div class="row mb-3 gy-3">
-        <div class="d-grid col-xl-8">
-            <input type="submit" name="mtrx_sim_check" value="Проверка файла" class="btn btn-secondary">
+        <div class="row mb-3 gy-3">
+            <div class="d-grid col-xl-8">
+                <input type="submit" name="mtrx_sim_check" value="Проверка файла" class="btn btn-secondary">
+            </div>
         </div>
-    </div>
 
 
-    {% if comp_code_errors %}
-        <div class="d-grid col-xl-8">
-            <div class="alert alert-danger text-center" role="alert">
-                <b>Коды компетенций файла, которые не найдены в плане</b><br>
-                {{ ', '.join(comp_code_errors) }}
+        {% if comp_code_errors %}
+            <div class="d-grid col-xl-8">
+                <div class="alert alert-danger text-center" role="alert">
+                    <b>Коды компетенций файла, которые не найдены в плане</b><br>
+                    {{ ', '.join(comp_code_errors) }}
+                </div>
+            </div>
+        {% endif %}
+
+        {% if report %}
+        <div class="row mb-3 gy-3">
+            <div class="d-grid col-xl-8">
+            <table class="table">
+            <tr>
+                <td><b>Связи из файла:</b></td>
+                <td></td>
+            </tr>
+            {% for disc in report %}
+              <tr>
+                <td class="col-xl-5"><span style="white-space: pre-line">{{ disc }}</span></td>
+                  {% if report[disc] == ['None'] %}
+                <td class="text-danger col-xl-3"><span style="white-space: pre-line"><b>Нет связей в файле</b></span></td>
+                  {% elif not report[disc] %}
+                <td class="text-danger col-xl-3"><span style="white-space: pre-line"><b>Отсутствует в файле</b></span></td>
+                  {% else %}
+                <td class="col-xl-3"><span style="white-space: pre-line">{{ ', '.join(report[disc]) }}</span></td>
+                  {% endif %}
+              </tr>
+            {% endfor %}
+            </table>
+        </div>
+        </div>
+        {% endif %}
+
+        <div class="row mb-3 gy-3">
+            <div class="d-grid col-xl-8">
+                <input type="submit" name="mtrx_sim_load" value="Загрузка связей" class="btn btn-success">
             </div>
         </div>
     {% endif %}
-
-    {% if report %}
-    <div class="row mb-3 gy-3">
-        <div class="d-grid col-xl-8">
-        <table class="table">
-        <tr>
-            <td><b>Связи из файла:</b></td>
-            <td></td>
-        </tr>
-        {% for disc in report %}
-          <tr>
-            <td class="col-xl-5"><span style="white-space: pre-line">{{ disc }}</span></td>
-              {% if report[disc] == ['None'] %}
-            <td class="text-danger col-xl-3"><span style="white-space: pre-line"><b>Нет связей в файле</b></span></td>
-              {% elif not report[disc] %}
-            <td class="text-danger col-xl-3"><span style="white-space: pre-line"><b>Отсутствует в файле</b></span></td>
-              {% else %}
-            <td class="col-xl-3"><span style="white-space: pre-line">{{ ', '.join(report[disc]) }}</span></td>
-              {% endif %}
-          </tr>
-        {% endfor %}
-        </table>
-    </div>
-    </div>
-    {% endif %}
-
-
-    <div class="row mb-3 gy-3">
-        <div class="d-grid col-xl-8">
-            <input type="submit" name="mtrx_sim_load" value="Загрузка связей" class="btn btn-success">
-        </div>
-    </div>
 
 </form>
     {% endblock %}
